# dedtris

./: .gitignore  Cargo.toml  README.md  test.lua  test.xml
.github/workflows/: rust.yml
Profiles/: bag_spawn.lua
Profiles/default/: config.ini  script.lua
Profiles/default_bag_spawn/: config.ini  script.lua
Profiles/giant/: config.ini  script.lua
Profiles/hyper_giant/: config.ini  script.lua
Profiles/sprint/: config.ini  script.lua
Themes/: bag_spawn.lua  default.lua  test.lua
Themes/default/: config.ini  script.lua
Themes/default_bag_spawn/: script.lua
Themes/sprint/: script.lua
src/: component.rs  error.rs  file.rs  game.rs  lua.rs  main.rs  menu.rs  runtime.rs
src/game/: drawer.rs  field.rs  game.rs  gen.rs  pieces.rs  profile_api.rs  size.rs  state.rs  theme.rs  theme_api.rs
src/game/drawer/: player.rs  size.rs
src/game/state/: field.rs  flags.rs  gen.rs  pieces.rs
src/lua/: theme.rs
src/menu/: profile.rs  theme.rs
src/runtime/: drawer.rs  game.rs  profile_api.rs  state.rs
src/runtime/drawer/: size.rs
src/runtime/state/: field.rs  pieces.rs
