[package]
name = "majtris"
version = "0.3.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
sdl2 = { version = "0.35.*", features = ["image"] }
rand = "0.8"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9"
rlua = "0.19"
rust-ini = "0.18"
